[gd_scene load_steps=8 format=3 uid="uid://c6c7xxmin6mg5"]

[ext_resource type="Script" uid="uid://bbx7s8nskwiv1" path="res://source/assets/ui/inventory_slot.gd" id="1_8hijp"]
[ext_resource type="Material" uid="uid://drvjrexbrri0j" path="res://source/assets/ui/inventory_slot_mat.tres" id="1_10oea"]
[ext_resource type="Script" uid="uid://c8rev6ihosd6u" path="res://source/assets/resources/item_data.gd" id="2_svwre"]
[ext_resource type="Theme" uid="uid://dq0fbwjx1psc" path="res://source/assets/ui/inventory_slot_theme.tres" id="3_3xp1c"]
[ext_resource type="Texture2D" uid="uid://crcq45hwhctvi" path="res://source/assets/ui/buttons/inventory_slot_selected.png" id="5_ye2p5"]
[ext_resource type="AudioStream" uid="uid://1qsvpsnbjyyj" path="res://source/assets/sounds/ui/inventory_scroll_click.ogg" id="7_j7b4s"]

[sub_resource type="Resource" id="Resource_be26v"]
script = ExtResource("2_svwre")
name = ""
self_useable = false
hold_rotation_offset = Vector3(0, 0, 0)
hold_scale_multiplier = 1.0

[node name="item_slot" type="MarginContainer"]
custom_minimum_size = Vector2(36, 36)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_8hijp")
item_data = SubResource("Resource_be26v")

[node name="slot_button" type="Button" parent="."]
material = ExtResource("1_10oea")
layout_mode = 2
theme = ExtResource("3_3xp1c")
disabled = true
keep_pressed_outside = true

[node name="slot_frame" type="TextureRect" parent="."]
visible = false
material = ExtResource("1_10oea")
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_ye2p5")
stretch_mode = 2

[node name="item_texture_rect" type="TextureRect" parent="."]
material = ExtResource("1_10oea")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
stretch_mode = 2

[node name="hover_sound_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_j7b4s")
pitch_scale = 2.0
max_polyphony = 8

[connection signal="button_down" from="slot_button" to="." method="_on_slot_button_button_down"]
[connection signal="button_up" from="slot_button" to="." method="_on_slot_button_button_up"]
[connection signal="mouse_entered" from="slot_button" to="." method="_on_slot_button_mouse_entered"]
